@@ -1,5 +1,9 @@
 2023-08-19  Michael Albinus  <michael.albinus@gmx.de>
 
+	* tramp.el (tramp-completion-file-name-handler-alist):
+	Add `file-directory-p'.
+	(tramp-completion-handle-file-directory-p): New defun.
+
 	* tramp-message.el (tramp-debug-command-messages): Adapt docstring.
 	(tramp-message, with-tramp-debug-message): Don't require a minimum
 	`tramp-verbose' level when `tramp-debug-command-messages' is non-nil.
